
[project]
name = "django_wcag_zoo_runner"
version = "0.0.1"
authors = [
  { name="James Shuttleworth", email="digehode@googlemail.com" },
]
description = "Tool for running WCAG-zoo tests against a django project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/digehode/wcag-zoo-runner"
Issues = "https://github.com/digehode/wcag-zoo-runner/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
